Fix translation text to overflow on narrow columns
When translations made by an user contain very long words
the text can overlap with the next column. This CSS fix makes
words to wrap when they do not fit the available space.

--- a/resources/css/ext.translate.special.translatesandbox.css
+++ b/resources/css/ext.translate.special.translatesandbox.css
@@ -231,6 +231,7 @@ textarea.body {
 	border-bottom: 1px solid #c9c8c8;
 	padding: 10px;
 	font-size: 16px;
+	word-wrap: break-word;
 }
 
 .translations .title {
